# fts-xapian

./: .gitignore  .travis.yml  AUTHORS  Makefile.am  README.md  configure.ac  fts-xapian-config.h  fts-xapian-config.h.in  fts-xapian-plugin.c
contrib/conf.d/: 90-fts.conf
contrib/systemd/: dovecot-fts-optimize.service.in  dovecot-fts-optimize.timer.in
m4/: dovecot.m4  icu.m4  xapian.m4
src/: Makefile.am  fts-backend-xapian-functions.cpp  fts-backend-xapian.cpp  fts-backend-xapian.h  fts-xapian-plugin.c  fts-xapian-plugin.h  fts-xapian-settings.c
